--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 .vera-pdf-app {
   font-family: $font-family;
@@ -13,7 +14,10 @@
   position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 75px;
-  padding-bottom: 50px;
+  padding: 90px 15px 60px 15px;
   box-sizing: border-box;
+}
+
+.app-link {
+  @include common-link;
 }
