--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -5,15 +5,21 @@ $color-white--75: rgba(255, 255, 255, 0.75);
 $color-white--50: rgba(255, 255, 255, 0.50);
 $color-white--25: rgba(255, 255, 255, 0.25);
 
+$color-grey: #f5f5fb;
+
 $color-black: #000;
 $color-black--75: rgba(0, 0, 0, 0.75);
 $color-black--50: rgba(0, 0, 0, 0.50);
 $color-black--25: rgba(0, 0, 0, 0.25);
 
-$color-grey: #f5f5fb;
+$color-primary: #cf3f4f;
 
-$text-color--basic: $color-black;
+$color-error: #ce1126;
+
+$text-color--basic: $color-black--75;
 $text-color--secondary: $color-black--50;
+
+$link-color--basic: $color-primary;
 
 $border-color--basic: $color-black--50;
 
@@ -21,3 +27,5 @@ $box-shadow--basic: 0 1px 2px rgba(0,0,0,0.1);
 
 $bg-color--basic: $color-grey;
 $bg-color--primary: $color-white;
+
+$linear: all .2s linear;
