--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -16,6 +16,8 @@ $color-primary: #cf3f4f;
 
 $color-error: #ce1126;
 
+$color-accent: rgb(76, 173, 147);
+
 $text-color--basic: $color-black--75;
 $text-color--secondary: $color-black--50;
 
