--- a/src/components/layouts/pages/upload/dropzone/Dropzone.scss
+++ b/src/components/layouts/pages/upload/dropzone/Dropzone.scss
@@ -3,7 +3,7 @@
 .dropzone {
   width: 100%;
   transition: $linear;
-  padding: 30px 0;
+  min-height: $page-content-min-height;
 
   display: flex;
   align-items: flex-start;
