--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -1,5 +1,8 @@
 $font-family: Roboto, sans-serif;
 
+$font-size--basic: 16px;
+$font-size--secondary: 14px;
+
 $color-white: #fff;
 $color-white--75: rgba(255, 255, 255, 0.75);
 $color-white--50: rgba(255, 255, 255, 0.50);
@@ -29,5 +32,7 @@ $box-shadow--basic: 0 1px 2px rgba(0,0,0,0.1);
 
 $bg-color--basic: $color-grey;
 $bg-color--primary: $color-white;
+
+$page-content-min-height: 150px;
 
 $linear: all .2s linear;
