#16: implemented Status page and job progress

--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -21,6 +21,10 @@ $color-error: #ce1126;
 
 $color-accent: rgb(76, 173, 147);
 
+$color-success: #4caf50;
+
+$color-warning: #ff9800;
+
 $text-color--basic: $color-black--75;
 $text-color--secondary: $color-black--50;
 
