--- a/src/components/layouts/pages/status/JobStatus.scss
+++ b/src/components/layouts/pages/status/JobStatus.scss
@@ -3,12 +3,13 @@
 .job-status {
   &__progress {
     min-height: 256px;
-    padding: 25px 0;
+    padding: 50px 0;
     box-sizing: border-box;
 
     .error {
       text-align: center;
       color: $color-error;
+      margin: 0;
     }
   }
 }
