--- a/src/components/_variables.scss
+++ b/src/components/_variables.scss
@@ -19,9 +19,7 @@ $color-primary: #cf3f4f;
 
 $color-error: #ce1126;
 
-$color-accent: rgb(76, 173, 147);
-
-$color-success: #4caf50;
+$color-success: rgb(76, 173, 147);
 
 $color-warning: #ff9800;
 
