--- a/src/components/layouts/pages/upload/dropzone/Dropzone.scss
+++ b/src/components/layouts/pages/upload/dropzone/Dropzone.scss
@@ -35,7 +35,7 @@
 
     &._filled {
       color: $color-black--50;
-      border-color: $color-accent;
+      border-color: $color-success;
     }
   }
 }
