#17: Added "reset app" functionality

--- a/src/components/layouts/pages/notFound/NotFound.scss
+++ b/src/components/layouts/pages/notFound/NotFound.scss
@@ -1,6 +1,8 @@
 @import "../../../variables";
+@import "../../../mixins";
 
 .not-found {
+  @include centered-column;
   &__message {
     height: 256px;
     display: flex;
