#33: Added rule/check tree for Inspect page

--- a/src/components/layouts/pages/inspect/Inspect.scss
+++ b/src/components/layouts/pages/inspect/Inspect.scss
@@ -11,14 +11,14 @@
 
   display: grid;
   grid: "toolbar toolbar" 40px
-        "document document" 1fr;
+        "tree document" 1fr;
   grid-template-columns: 30% 1fr;
 
   .toolbar {
     grid-area: toolbar;
   }
 
-  &__tree {
+  .summary-tree {
     grid-area: tree;
   }
 
