--- a/src/components/layouts/footer/Footer.scss
+++ b/src/components/layouts/footer/Footer.scss
@@ -6,7 +6,9 @@
   width: 100%;
   height: 50px;
   border-top: 1px solid $border-color--basic;
+  box-sizing: border-box;
   color: $text-color--secondary;
+  background: $bg-color--basic;
 
   display: flex;
   flex-direction: row;
