--- a/src/components/shared/pageNavigation/PageNavigation.scss
+++ b/src/components/shared/pageNavigation/PageNavigation.scss
@@ -7,6 +7,7 @@
     flex-grow: 1;
     flex-basis: 0;
     justify-content: center;
+    align-items: start;
 
     .app-link {
       color: inherit;
