Added layout container for pages with steps and limited width

--- a/src/components/layouts/pages/notFound/NotFound.scss
+++ b/src/components/layouts/pages/notFound/NotFound.scss
@@ -4,7 +4,7 @@
 .not-found {
   @include centered-column;
   &__message {
-    height: 256px;
+    min-height: $min-content-height;
     display: flex;
     flex-direction: column;
     align-items: center;
