--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -12,10 +12,8 @@
 
 .app-content {
   width: 100%;
-  min-height: 100%;
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 75px 10px 50px 10px;
+  padding: 75px 0 50px 0;
   box-sizing: border-box;
 }
 
