#71: Showing error details
(cherry picked from commit f86d521773690d022752e903709d82d5313c4d88)

--- a/src/components/layouts/pages/status/JobStatus.scss
+++ b/src/components/layouts/pages/status/JobStatus.scss
@@ -8,8 +8,14 @@
 
     .error {
       text-align: center;
-      color: $color-error;
-      margin: 0;
+      &__message {
+        color: $color-error;
+        margin: 0;
+      }
+
+      &__details {
+        margin: 5px 0;
+      }
     }
   }
 }
