#77: Fixed text position in rules without checks

--- a/src/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/components/layouts/pages/inspect/tree/Tree.scss
@@ -26,6 +26,10 @@
           white-space: nowrap;
           margin-right: 5px;
         }
+
+        &_empty {
+          padding-left: 24px;
+        }
       }
 
       &_error {
