--- a/src/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/components/layouts/pages/inspect/tree/Tree.scss
@@ -18,6 +18,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
+          justify-content: space-between;
         }
 
         .content-text {
