--- a/src/components/shared/pageNavigation/PageNavigation.scss
+++ b/src/components/shared/pageNavigation/PageNavigation.scss
@@ -1,17 +1,7 @@
 .page-navigation {
   display: flex;
   padding: 20px 0 10px 0;
-
-  section {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
-    justify-content: center;
-    align-items: start;
-
-    .app-link {
-      color: inherit;
-      display: flex;
-    }
-  }
+  justify-content: space-between;
+  width: 80%;
+  margin: auto;
 }
