--- a/src/components/layouts/pages/inspect/pdfDocument/PdfDocument.scss
+++ b/src/components/layouts/pages/inspect/pdfDocument/PdfDocument.scss
@@ -1,8 +1,6 @@
 .pdf-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   position: relative;
+  justify-self: center;
 }
 
 .pdf-page {
