--- a/src/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/components/layouts/pages/inspect/tree/Tree.scss
@@ -57,3 +57,9 @@
   display: block;
   position: relative;
 }
+
+#summary-tree-subheader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
