--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -49,7 +49,7 @@ main {
 .app-info .btn {
     margin-top: 16px;
 }
-.app-info span {
+.app-info div {
     line-height: 2em;
     color: rgba(0, 0, 0, .6);
 }
