Add filename label

--- a/src/components/layouts/pages/inspect/toolbar/Toolbar.scss
+++ b/src/components/layouts/pages/inspect/toolbar/Toolbar.scss
@@ -33,4 +33,10 @@
       margin-right: 4px;
     }
   }
+
+  &__filename {
+    max-width: 35vw;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
