Add ability to cancel job

--- a/src/common/components/_variables.scss
+++ b/src/common/components/_variables.scss
@@ -13,6 +13,7 @@ $color-grey: #f5f5fb;
 $color-black: #000;
 $color-black--75: lighten($color-black, 25%);
 $color-black--50: lighten($color-black, 50%);
+$color-black--35: lighten($color-black, 65%);
 $color-black--25: lighten($color-black, 75%);
 
 $color-primary: #cf3f4f;
