--- a/src/common/components/_mixins.scss
+++ b/src/common/components/_mixins.scss
@@ -12,3 +12,8 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-right-aligned {
+  display: flex;
+  justify-content: flex-end;
+}
