Add support for job timeout

--- a/src/common/components/layouts/pages/results/summary/Summary.scss
+++ b/src/common/components/layouts/pages/results/summary/Summary.scss
@@ -64,13 +64,19 @@
     }
   }
 
-  .cancelled-section {
+  .error-section {
     @include centered-column;
     margin: 30px;
     svg {
       font-size: 130px;
-      color: $color-black--35;
       margin-bottom: 15px;
+    }
+
+    &_cancelled svg {
+      color: $color-black--35;
+    }
+    &_timeout svg {
+      color: $color-error;
     }
   }
 }
