Implement drag-and-drop in all pages

--- a/src/common/components/layouts/pages/upload/dropzoneWrapper/DropzoneWrapper.scss
+++ b/src/common/components/layouts/pages/upload/dropzoneWrapper/DropzoneWrapper.scss
@@ -2,9 +2,13 @@
 
 .dropzone-wrapper {
   overflow: hidden;
+  height: 100%;
 
   &__fade {
     position: fixed;
+    left: 0;
+    bottom: 50px;
+    top: 75px;
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     width: 100%;
