--- a/src/common/components/layouts/pages/upload/dropzone/DropzoneText.scss
+++ b/src/common/components/layouts/pages/upload/dropzone/DropzoneText.scss
@@ -1,10 +1,15 @@
 @import "../../../../variables";
 
 .dropzone-text {
+  max-width: calc(100% - 100px);
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   color: $color-black--75;
+}
 
-  &__file-size {
-    color: $color-black--50;
-    font-size: $font-size--basic;
-  }
+.dropzone-file-size {
+  color: $color-black--50;
+  font-size: $font-size--basic;
 }
