--- a/src/common/components/shared/fileName/FileName.scss
+++ b/src/common/components/shared/fileName/FileName.scss
@@ -1,11 +1,12 @@
 .job-filename {
     display: block;
-    font-weight: bold;
-    padding-top: 20px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-weight: bold;
+    padding-top: 20px;
 
     &__min { max-width: 320px; }
+    &__mid { max-width: 75%; }
     &__max { max-width: 75vw; }
 }
