--- a/src/common/components/shared/fileName/FileName.scss
+++ b/src/common/components/shared/fileName/FileName.scss
@@ -8,5 +8,10 @@
 
     &__min { max-width: 320px; }
     &__mid { max-width: 75%; }
-    &__max { max-width: 75vw; }
+    &__max {
+        max-width: 75vw; 
+        @media (min-width: 1200px) {
+            max-width: 1200px; 
+        }
+    }
 }
