--- a/src/common/components/App.scss
+++ b/src/common/components/App.scss
@@ -12,7 +12,7 @@
 
 .app-content {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   padding: 75px 0 50px 0;
   box-sizing: border-box;
