--- a/src/common/components/layouts/pages/upload/dropzone/DropzoneText.scss
+++ b/src/common/components/layouts/pages/upload/dropzone/DropzoneText.scss
@@ -1,10 +1,22 @@
 @import "../../../../variables";
 
 .dropzone-text {
+  display: flex;
+  justify-content: center;
+  width: 75%;
   color: $color-black--75;
 
-  &__file-size {
+  .dropzone-file {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 100px);
+  }
+
+  .dropzone-file-size {
     color: $color-black--50;
     font-size: $font-size--basic;
+    span { margin-left: 0.3em; }
   }
 }
