Expand area for file drop

--- a/src/common/components/layouts/pages/results/summary/Summary.scss
+++ b/src/common/components/layouts/pages/results/summary/Summary.scss
@@ -13,6 +13,7 @@
 
   &__chart {
     @include centered-column;
+    position: relative;
     height: 300px;
 
     // Remove chart tooltip flickering
