Implementing lodash methods

--- a/src/common/components/layouts/pages/inspect/structure/Structure.scss
+++ b/src/common/components/layouts/pages/inspect/structure/Structure.scss
@@ -14,8 +14,9 @@
   }
 }
 
-#summary-structure-subheader {
+.summary-structure-subheader {
   display: flex;
   justify-content: space-between;
+  overflow: auto;
 }
   
