Show all bboxes

--- a/src/common/components/_variables.scss
+++ b/src/common/components/_variables.scss
@@ -3,6 +3,8 @@ $font-family: Roboto, sans-serif;
 $font-size--basic: 16px;
 $font-size--secondary: 14px;
 
+$font-weight-bold: 800;
+
 $color-white: #fff;
 $color-white--75: darken($color-white, 25%);
 $color-white--50: darken($color-white, 50%);
