--- a/src/common/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/common/components/layouts/pages/inspect/tree/Tree.scss
@@ -3,16 +3,8 @@
 .summary-tree {
   background: $bg-color--primary;
   box-shadow: $box-shadow--basic;
-  display: grid;
-  grid: "list" 1fr
-        "filter" 40px;
   height: 100%;
   overflow: auto;
-
-  &__wrapper {
-    grid-area: list;
-    overflow: auto;
-  }
 
   &__list {
     .rule-item {
@@ -87,10 +79,6 @@
     }
   }
 
-  &__filter {
-    grid-area: filter;
-  }
-
   .MuiTypography-body1 {
     font-size: .9rem;
   }
@@ -103,7 +91,10 @@
 
 #summary-tree-subheader {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   font-weight: $font-weight-bold;
+
+  button:first-of-type {
+    margin-left: auto;
+  }
 }
