--- a/src/common/components/layouts/pages/inspect/tree/filterPopup/FilterPopup.scss
+++ b/src/common/components/layouts/pages/inspect/tree/filterPopup/FilterPopup.scss
@@ -22,7 +22,7 @@
     }
 
     &__toggle {
-        margin: 10px;;
+        margin: 10px;
     }
 
     &__wrapper {
@@ -31,14 +31,28 @@
 
     &__buttons {
         display: flex;
-        justify-content: flex-end;
+        align-items: center;
         gap: 3px;
+
+        button:nth-child(3) {
+            margin-left: auto;
+        }
     }
 
     &__grid {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(100px, auto));
         flex-direction: row;
-        grid-gap: 3px;
+        column-gap: 5px;
+        row-gap: 7px;
     }
+}
+
+.popup__grid .popup__grid__cell {
+    text-align: center;
+    text-transform: lowercase;
+    font-weight: 400;
+    border-radius: 2em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
