Update file upload via URL

--- a/src/common/components/_variables.scss
+++ b/src/common/components/_variables.scss
@@ -3,7 +3,7 @@ $font-family: Roboto, sans-serif;
 $font-size--basic: 16px;
 $font-size--secondary: 14px;
 
-$font-weight-bold: 800;
+$font-weight-bold: bold;
 
 $color-white: #fff;
 $color-white--75: darken($color-white, 25%);
