--- a/src/common/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/common/components/layouts/pages/inspect/tree/Tree.scss
@@ -94,7 +94,7 @@
   align-items: center;
   font-weight: $font-weight-bold;
 
-  button:first-of-type {
+  span:first-of-type {
     margin-left: auto;
   }
 }
