--- a/src/common/components/layouts/pages/inspect/tree/filterPopup/FilterPopup.scss
+++ b/src/common/components/layouts/pages/inspect/tree/filterPopup/FilterPopup.scss
@@ -12,37 +12,32 @@
             margin-left: auto;
         }
     }
-}
-
-.popup .popup__tagsPane {
-    padding-top: 0;
-}
-
-.popup .popup__select {
-    flex: 1;
-    padding-left: 10px;
-}
-
-.popup .popup__tagsTitle {
-    margin-left: 4px;
-    font-size: 11px;
-    line-height: 12.89px;
-    color: $color-black--50;
-}
-
-.popup .popup__tags {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    box-shadow: none;
-    padding: 0;
-    margin: 0;
-    max-width: 330px;
-}
-  
-.popup .popup__tags__tag {
-    &__selected {
-        border: 1px solid $color-primary;
+    .popup__tagsPane {
+        padding-top: 0;
     }
-    margin: 4px;
+    .popup__select {
+        flex: 1;
+        padding-left: 10px;
+    }
+    .popup__tagsTitle {
+        margin-left: 4px;
+        font-size: 11px;
+        line-height: 12.89px;
+        color: $color-black--50;
+    }
+    .popup__tags {
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        box-shadow: none;
+        padding: 0;
+        margin: 0;
+        max-width: 330px;
+    }
+    .popup__tags__tag {
+        &__selected {
+            border: 1px solid $color-primary;
+        }
+        margin: 4px;
+    }
 }
