Renaming css classes

--- a/src/common/components/shared/pageNavigation/PageNavigation.scss
+++ b/src/common/components/shared/pageNavigation/PageNavigation.scss
@@ -1,6 +1,6 @@
 @import '../../variables';
 
-.page-nav {
+.page-navigation {
   display: flex;
   padding: 20px 0 10px 0;
 
@@ -17,7 +17,7 @@
   }
 }
 
-.page-nav-text {
+.page-navigation-text {
   display: flex;
   padding: 0 0 10px 0;
 
