--- a/src/common/components/layouts/pages/inspect/structure/Structure.scss
+++ b/src/common/components/layouts/pages/inspect/structure/Structure.scss
@@ -14,5 +14,10 @@
   overflow: auto;
   font-weight: $font-weight-bold;
   white-space: nowrap;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar { 
+    display: none;
+  }
 }
   
