--- a/src/common/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/common/components/layouts/pages/inspect/tree/Tree.scss
@@ -110,6 +110,11 @@
   overflow: auto;
   font-weight: $font-weight-bold;
   white-space: nowrap;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar { 
+    display: none;
+  }
 
   button:first-of-type {
     margin-left: auto;
