Highlighting annotations in tree (#311)
* Highlighting annotations in tree

* Update dependencies version

--- a/src/common/components/layouts/pages/inspect/tree/Tree.scss
+++ b/src/common/components/layouts/pages/inspect/tree/Tree.scss
@@ -110,6 +110,7 @@
   overflow: auto;
   font-weight: $font-weight-bold;
   white-space: nowrap;
+  scrollbar-width: none;
 
   button:first-of-type {
     margin-left: auto;
