--- a/landing/assets/css/style.css
+++ b/landing/assets/css/style.css
@@ -18,10 +18,6 @@ header, main, footer {
     margin: 0 auto;
 }
 
-header, main {
-    min-height: 50vh;
-}
-
 .logo {
     height: 35px;
     width: auto;
@@ -91,7 +87,7 @@ main {
     text-decoration: none;
     color: #0771F2;
     align-items: center;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 .read-more:hover {
@@ -130,10 +126,12 @@ main {
 }
 
 footer {
+    margin-top: auto;
     max-width: 100%;
     border-top: 1px solid #808080;
     max-height: 100%;
     padding: 15px 0;
+    background-color: #ffffff;
 }
 
 .footer-content {
@@ -147,7 +145,7 @@ footer {
 .footer-content > div {
     width: 33%;
     text-align: center;
-    font-size: 14px;
+    font-size: 16px;
     color: #333333;
 }
 
