--- a/src/common/components/layouts/pages/results/summary/Summary.scss
+++ b/src/common/components/layouts/pages/results/summary/Summary.scss
@@ -59,7 +59,7 @@
       }
       &_failed {
         .legend-item__icon {
-          color: $color-primary;
+          color: $color-error;
         }
       }
     }
