--- a/src/common/components/_variables.scss
+++ b/src/common/components/_variables.scss
@@ -18,7 +18,7 @@ $color-black--50: lighten($color-black, 50%);
 $color-black--35: lighten($color-black, 65%);
 $color-black--25: lighten($color-black, 75%);
 
-$color-primary: #cf3f4f;
+$color-primary: #643346;
 
 $color-error: #ce1126;
 
