--- a/src/common/components/layouts/pages/inspect/structure/Tree/Tree.scss
+++ b/src/common/components/layouts/pages/inspect/structure/Tree/Tree.scss
@@ -1,9 +1,12 @@
 .tree {
-    &__item {
+    .MuiListItem-root, &__item {
         display: flex;
         align-items: center;
-        transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+        min-width: 200px;
+        padding: 0;
+        text-wrap: nowrap;
         cursor: pointer;
+        transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
         &__selected {
             background-color: rgba(0, 0, 0, 0.4);
