--- a/src/common/components/shared/pageNavigation/PageNavigation.scss
+++ b/src/common/components/shared/pageNavigation/PageNavigation.scss
@@ -14,6 +14,13 @@
       color: inherit;
       display: flex;
     }
+
+    button {
+      @media (max-width: 623px) {
+        max-width: min-content;
+        padding: 6px 24px;
+      }
+    }
   }
 }
 
@@ -36,6 +43,10 @@
 
     button {
       margin: 20px 0 0 0;
+
+      @media (max-width: 623px) {
+        padding: 18px 24px;
+      }
     }
 
     .app-link {
