--- a/src/common/components/layouts/pages/feedback/Feedback.scss
+++ b/src/common/components/layouts/pages/feedback/Feedback.scss
@@ -15,6 +15,14 @@
     margin-bottom: 15px;
   }
 
+  .form-button {
+    margin: 15px 0 30px 0;
+  }
+
+  .MuiFormLabel-root.Mui-focused {
+    color: rgba(0, 0, 0, 0.75);
+  }
+
   .MuiOutlinedInput-root {
     margin-top: 10px;
   }
